[tool.poetry]
name = "neurop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sympy = ">1"
scipy = ">1"
networkx = ">3"
numpy = ">1"
tqdm = "^4.66.1"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
ipykernel = "*"
optlang = "^1.7.0"
dwave-neal = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
